# NBA-squad-calculator

./: NBAproject.pptx  README.md  form.ui  main.py  table_data.csv
File.csv/: Kick.csv  NBA Contracts Summary.xlsx  NBA Player Contracts.xlsx  Newcomers.csv  Salary.csv  Squad.csv  Total.csv
NBA-squad/: CMakeLists.txt  Salary.csv  east.cpp  east1.h  east10.cpp  east10.h  east10.ui  east11.h  east12.cpp  east12.ui  east13.cpp  east13.h  east13.ui  east14.cpp  east14.h  east14.ui  east15.cpp  east15.h  east15.ui  east2.cpp  east2.h  east3.cpp  east4.cpp  east4.h  east4.ui  east5.cpp  east5.ui  east6.cpp  east6.h  east6.ui  east7.h  east8.cpp  east8.h  east8.ui  east9.cpp  east9.ui  mainwindow.cpp  mainwindow.ui  other.qrc  west.cpp  (+3 more)
NBA-squad-calculator-artem2284708-patch-1/NBA_squad/: Newcomers.csv  form.cpp  form.ui  mainwindow.ui
NBA_squad/: CMakeLists.txt  CMakeLists.txt.user.bea80c9  Squad.csv  clickablelabel.cpp  clickablelabel.h  east.h  east.ui  east1.cpp  east1.ui  east11.cpp  east11.ui  east12.h  east2.ui  east3.h  east3.ui  east5.h  east7.cpp  east7.ui  east9.h  form.cpp  form.h  form.ui  form_2.cpp  form_2.h  form_2.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  west.h  west.ui  west1.cpp  west1.h  west1.ui  west10.cpp  west10.h  west10.ui  west11.cpp  west11.h  west11.ui  (+35 more)
QT/: CMakeLists.txt  east.cpp  east.h  east.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.ui  other.qrc  west.cpp  west.h  west.ui  west1.cpp  west1.h  west1.ui
Table preprocessing/: Efectivity of player.py  Efectivity_of_player.py  Get results.py  Salary cap.py  Salary_cap.py  main.py  nba_prog.py  outCandidates.py  potentialNewcomers.py  run.sh  squadInfo.py
